# infomax-option-critic

./: .gitignore  README.md  a2imoc.py  batch_holder.py  nets.py  option_select_impl.py  our_oc.py  ppimoc.py  pyproject.toml  requirements-mujoco.txt  requirements.txt  rollout.py  run_4rooms.py  run_mjmaze.py  vis_4rooms.py  vis_mjmaze.py  vis_utils.py
src/: a2imoc.py  batch_holder.py  option_select_impl.py  our_oc.py  ppimoc.py  run_mjmaze.py  vis_mjmaze.py  vis_utils.py
trained-models/: a2imoc-grid-four-rooms.pth  aoc-grid-four-rooms.pth  our-aoc-grid-four-rooms.pth  our-ppoc-mujoco-billiard.pth  our-ppoc-mujoco-four-rooms.pth  ppimoc-mujoco-billiard.pth  ppimoc-mujoco-four-rooms.pth  ppoc-mujoco-billiard.pth  ppoc-mujoco-four-rooms.pth
